nerdlets/shared/components/components.scss
@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400,400i,600&display=swap');

.error {
  width: 50%;
  margin: auto;
  margin-top: 100px;
  .errorDetails {
    margin-top: 20px;
    font-size: 0.9em;
  }
}

.row {
  text-align: center;
  margin-top: 30px;
}

.breakdownContainer {
  padding: 0 50px;
  grid-column-gap: 40px;
  grid-row-gap: 30px;
}

.cohorts {
  display: flex;
  margin: 80px 0 20px;
  padding-top: 50px;
  padding-left: 32px;
}

.cohort {
  display: flex;
  flex-direction: column;
  min-width: 335px;
  margin-top: 50px;
  background: #FFFFFF;
  border: 1px solid #E3E4E4;
  box-shadow: 0 1px 3px 0 rgba(203,226,226,0.34);
  border-radius: 3px;

  .sectionTitle {
    display:flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    grid-column-end: span 4;
    font-size: 14px;
    line-height: 24px;
    font-weight: 600;
    box-shadow: inset 0 1px 0 #ebecec, inset 0 -1px 0 #ebecec;
    background-color: #F4F5F5;
    color: #464E4E;
    -webkit-font-smoothing: antialiased;
  }

  .icon {
    display: inline-block;
    position: relative;
    max-width: 53px;
    max-height: 53px;
    margin: -43px auto 6px;
    background-color: rgba(0,0,0, .3);
    padding: 16px;
    border-radius: 30px;
    box-shadow: 0 0 0 8px #fff;

    svg {
      position: absolute;
      top: 15px;
      left: 18px;
      max-width: 53px;
      max-height: 53px;
    }
  }
}

.satisfied .icon,
.improvement .icon {
  background-color: #F2FCF3;
}

.tolerated .icon {
  background-color: #FCF9F2;
}

.frustrated .icon {
  background-color: #FDF5F6;
}

.cohortStats {
  display: grid;
  grid-template-columns: repeat(4, 25%);
  grid-template-rows: 70px 70px 93px;

  & > .cohortStat {
    grid-column-end: span 2;
  }
}

.improvement {
  margin-top: 40px;
  align-self: start;

  .cohortStats {
    grid-auto-rows: 70px;
    grid-template-rows: inherit;
  }
}

.cohortStat {
  display: flex;
  flex-direction: column;
  justify-content: center;
  box-shadow: inset -1px 1px 0 0 #ebecec;

  &:nth-child(even) {
    box-shadow: inset 0px 1px 0 0 #ebecec;
  }
}

.cohortStat .label {
  display: block;
  font-size: 14px;
  color: #2A3434;
  text-align: center;
  line-height: 22px;
  font-weight: 700;
  -webkit-font-smoothing: antialiased;
}

.cohortStat .value {
  display: block;
  font-family: 'fira sans', 'open sans', sans-serif;
  font-size: 21px;
  color: #464e4e;
  letter-spacing: 0.5px;
  text-align: center;
  line-height: 24px;
  font-weight: 300;
}

.cohortWideSection {
  display: grid;
  grid-column-end: span 4;
  grid-template-columns: repeat(4, 25%);
  grid-template-rows: 30px 62px;

  .cohortStat {
    box-shadow: inset 1px 0 0 #ebecec;
  }

  .cohortStat:first-of-type {
    box-shadow: none;
  }

  .cohortStat .label {
    font-size: 12px;
  }

  .cohortStat .value {
    font-size: 20px;
  }
}

.cohortTitle {
  font-size: 21px;
  color: #464E4E;
  text-align: center;
  line-height: 24px;
  font-weight: 400;
}

.apmButton {
  height: fit-content;
  margin: auto;
  padding: 5px;
}

.cohortDescription {
  text-align: center;
  font-size: 12px;
  margin: 0px auto 8px;
  padding: 0px 16px 5px;
  line-height: 19px;
  color: #8e9494;
}

.icon {
  display: inline-block;
  font-size: 125px !important;
}
.summaryBar {
  background: #fff;
  padding: 10px;
  border-radius: 5px;
  .summaryTitle {
    padding-top: 10px;
  }
  .summaryEnd {
    padding-left: 10px;
    padding-top: 15px;
  }
}
.ACB3AT-vz--viz-billboard-element {
  width: 33% !important;
}
.pageUrlTable {
  width: 100%;
  height: 600px;
  h1 {
    margin-bottom: 10px;
  }
}

.wider {
  width: 120px;
}

.tableChart {
  width: 100%;
  height: 100%;
}

.microchart {
  height: 75px;
  width: 85px;
  &.wider {
    width: 120px;
  }
}

.inline {
  padding-left: 20px;
  padding-right: 20px;
  display: flex;
  flex-direction: row;
  border-right: 1px dotted grey;
  span, h2 {
    margin: auto 5px;
    font-weight: 500;
  }
  span {
    font-size: 1.2em;
  }
}

.cohortsSmallPrint {
  grid-column: auto / span 12;
  background-color: #f2fafc;
  color: #0079bf;
  padding: 15px;
  text-align: center;
  border-radius: 3px;
}

.pageUrl {
  margin: 30px 0;
  padding-bottom: 25px;
  color: #464e4e;
  border-bottom: 1px dotted #b9bdbd;
  font-weight: 500;
}

.pageUrlPath {
  color: #2a3434;
  font-weight: bold;
}

.performance-improvement-table {
  max-height: 500px;
  height: inherit;
  border: 1px solid #e3e4e4;
  box-shadow: 0 1px 3px 0 rgba(203, 226, 226, 0.34);
  border-radius: 3px;
}

